--- a/keys.toml
+++ b/keys.toml
@@ -1,664 +1,638 @@
-# Default 85% (Tenkeyless) Keyboard Layout
-# Coordinates are relative and will be scaled by the application.
-# Standard key size is assumed to be 50x50 units, with spacing of 5 units.
-# X coordinates increase to the right, Y coordinates increase downwards.
-
-# Function Row
 [[key]]
 name = "Esc"
-x = 0
-y = 0
+x = 25.0
+y = 25.0
 width = 50
 height = 50
-# keycode = "esc" # Test defaulting
 
 [[key]]
 name = "F1"
-x = 75
-y = 0
+x = 100.0
+y = 25.0
 width = 50
 height = 50
-# keycode = "f1"
 
 [[key]]
 name = "F2"
-x = 130
-y = 0
+x = 155.0
+y = 25.0
 width = 50
 height = 50
 
 [[key]]
 name = "F3"
-x = 185
-y = 0
+x = 210.0
+y = 25.0
 width = 50
 height = 50
 
 [[key]]
 name = "F4"
-x = 240
-y = 0
+x = 265.0
+y = 25.0
 width = 50
 height = 50
 
 [[key]]
 name = "F5"
-x = 320
-y = 0
+x = 345.0
+y = 25.0
 width = 50
 height = 50
 
 [[key]]
 name = "F6"
-x = 375
-y = 0
+x = 400.0
+y = 25.0
 width = 50
 height = 50
 
 [[key]]
 name = "F7"
-x = 430
-y = 0
+x = 455.0
+y = 25.0
 width = 50
 height = 50
 
 [[key]]
 name = "F8"
-x = 485
-y = 0
+x = 510.0
+y = 25.0
 width = 50
 height = 50
 
 [[key]]
 name = "F9"
-x = 565
-y = 0
+x = 590.0
+y = 25.0
 width = 50
 height = 50
 
 [[key]]
 name = "F10"
-x = 620
-y = 0
+x = 645.0
+y = 25.0
 width = 50
 height = 50
 
 [[key]]
 name = "F11"
-x = 675
-y = 0
+x = 700.0
+y = 25.0
 width = 50
 height = 50
 
 [[key]]
 name = "F12"
-x = 730
-y = 0
+x = 755.0
+y = 25.0
 width = 50
 height = 50
-# keycode = "f12"
 
-# Number Row
 [[key]]
 name = "`"
-x = 0
-y = 55
+x = 25.0
+y = 80.0
 width = 50
 height = 50
 keycode = "grave"
 
 [[key]]
 name = "1"
-x = 55
-y = 55
+x = 80.0
+y = 80.0
 width = 50
 height = 50
-# keycode = "1"
 
 [[key]]
 name = "2"
-x = 110
-y = 55
+x = 135.0
+y = 80.0
 width = 50
 height = 50
 
 [[key]]
 name = "3"
-x = 165
-y = 55
+x = 190.0
+y = 80.0
 width = 50
 height = 50
 
 [[key]]
 name = "4"
-x = 220
-y = 55
+x = 245.0
+y = 80.0
 width = 50
 height = 50
 
 [[key]]
 name = "5"
-x = 275
-y = 55
+x = 300.0
+y = 80.0
 width = 50
 height = 50
 
 [[key]]
 name = "6"
-x = 330
-y = 55
+x = 355.0
+y = 80.0
 width = 50
 height = 50
 
 [[key]]
 name = "7"
-x = 385
-y = 55
+x = 410.0
+y = 80.0
 width = 50
 height = 50
 
 [[key]]
 name = "8"
-x = 440
-y = 55
+x = 465.0
+y = 80.0
 width = 50
 height = 50
 
 [[key]]
 name = "9"
-x = 495
-y = 55
+x = 520.0
+y = 80.0
 width = 50
 height = 50
 
 [[key]]
 name = "0"
-x = 550
-y = 55
+x = 575.0
+y = 80.0
 width = 50
 height = 50
 
 [[key]]
 name = "-"
-x = 605
-y = 55
+x = 630.0
+y = 80.0
 width = 50
 height = 50
 keycode = "minus"
 
 [[key]]
 name = "="
-x = 660
-y = 55
+x = 685.0
+y = 80.0
 width = 50
 height = 50
 keycode = "equal"
 
 [[key]]
 name = "Backspace"
-x = 715
-y = 55
-width = 105 # Wider
+x = 767.5
+y = 80.0
+width = 105
 height = 50
-# keycode = "backspace"
 
-# Top Alpha Row (QWERTY)
 [[key]]
 name = "Tab"
-x = 0
-y = 110
-width = 80 # Wider
+x = 40.0
+y = 135.0
+width = 80
 height = 50
-# keycode = "tab"
 
 [[key]]
 name = "Q"
-x = 85
-y = 110
+x = 110.0
+y = 135.0
 width = 50
 height = 50
 
 [[key]]
 name = "W"
-x = 140
-y = 110
+x = 165.0
+y = 135.0
 width = 50
 height = 50
 
 [[key]]
 name = "E"
-x = 195
-y = 110
+x = 220.0
+y = 135.0
 width = 50
 height = 50
 
 [[key]]
 name = "R"
-x = 250
-y = 110
+x = 275.0
+y = 135.0
 width = 50
 height = 50
 
 [[key]]
 name = "T"
-x = 305
-y = 110
+x = 330.0
+y = 135.0
 width = 50
 height = 50
 
 [[key]]
 name = "Y"
-x = 360
-y = 110
+x = 385.0
+y = 135.0
 width = 50
 height = 50
 
 [[key]]
 name = "U"
-x = 415
-y = 110
+x = 440.0
+y = 135.0
 width = 50
 height = 50
 
 [[key]]
 name = "I"
-x = 470
-y = 110
+x = 495.0
+y = 135.0
 width = 50
 height = 50
 
 [[key]]
 name = "O"
-x = 525
-y = 110
+x = 550.0
+y = 135.0
 width = 50
 height = 50
 
 [[key]]
 name = "P"
-x = 580
-y = 110
+x = 605.0
+y = 135.0
 width = 50
 height = 50
 
 [[key]]
 name = "["
-x = 635
-y = 110
+x = 660.0
+y = 135.0
 width = 50
 height = 50
 keycode = "leftbrace"
 
 [[key]]
 name = "]"
-x = 690
-y = 110
+x = 715.0
+y = 135.0
 width = 50
 height = 50
 keycode = "rightbrace"
 
 [[key]]
 name = "\\"
-x = 745
-y = 110
-width = 70 # Often wider
+x = 780.0
+y = 135.0
+width = 70
 height = 50
 keycode = "backslash"
 
-# Middle Alpha Row (ASDF)
 [[key]]
 name = "Caps Lock"
-x = 0
-y = 165
-width = 95 # Wider
+x = 47.5
+y = 190.0
+width = 95
 height = 50
 keycode = "capslock"
 
 [[key]]
 name = "A"
-x = 100
-y = 165
+x = 125.0
+y = 190.0
 width = 50
 height = 50
 
 [[key]]
 name = "S"
-x = 155
-y = 165
+x = 180.0
+y = 190.0
 width = 50
 height = 50
 
 [[key]]
 name = "D"
-x = 210
-y = 165
+x = 235.0
+y = 190.0
 width = 50
 height = 50
 
 [[key]]
 name = "F"
-x = 265
-y = 165
+x = 290.0
+y = 190.0
 width = 50
 height = 50
 
 [[key]]
 name = "G"
-x = 320
-y = 165
+x = 345.0
+y = 190.0
 width = 50
 height = 50
 
 [[key]]
 name = "H"
-x = 375
-y = 165
+x = 400.0
+y = 190.0
 width = 50
 height = 50
 
 [[key]]
 name = "J"
-x = 430
-y = 165
+x = 455.0
+y = 190.0
 width = 50
 height = 50
 
 [[key]]
 name = "K"
-x = 485
-y = 165
+x = 510.0
+y = 190.0
 width = 50
 height = 50
 
 [[key]]
 name = "L"
-x = 540
-y = 165
+x = 565.0
+y = 190.0
 width = 50
 height = 50
 
 [[key]]
 name = ";"
-x = 595
-y = 165
+x = 620.0
+y = 190.0
 width = 50
 height = 50
 keycode = "semicolon"
 
 [[key]]
 name = "'"
-x = 650
-y = 165
+x = 675.0
+y = 190.0
 width = 50
 height = 50
 keycode = "apostrophe"
 
 [[key]]
 name = "Enter"
-x = 705
-y = 165
-width = 110 # Wider
+x = 760.0
+y = 190.0
+width = 110
 height = 50
-# keycode = "enter"
 
-# Bottom Alpha Row (ZXCV)
 [[key]]
 name = "L. Shift"
-x = 0
-y = 220
-width = 120 # Wider
+x = 60.0
+y = 245.0
+width = 120
 height = 50
 keycode = "leftshift"
 
 [[key]]
 name = "Z"
-x = 125
-y = 220
+x = 150.0
+y = 245.0
 width = 50
 height = 50
 
 [[key]]
 name = "X"
-x = 180
-y = 220
+x = 205.0
+y = 245.0
 width = 50
 height = 50
 
 [[key]]
 name = "C"
-x = 235
-y = 220
+x = 260.0
+y = 245.0
 width = 50
 height = 50
 
 [[key]]
 name = "V"
-x = 290
-y = 220
+x = 315.0
+y = 245.0
 width = 50
 height = 50
 
 [[key]]
 name = "B"
-x = 345
-y = 220
+x = 370.0
+y = 245.0
 width = 50
 height = 50
 
 [[key]]
 name = "N"
-x = 400
-y = 220
+x = 425.0
+y = 245.0
 width = 50
 height = 50
 
 [[key]]
 name = "M"
-x = 455
-y = 220
+x = 480.0
+y = 245.0
 width = 50
 height = 50
 
 [[key]]
 name = ","
-x = 510
-y = 220
+x = 535.0
+y = 245.0
 width = 50
 height = 50
 keycode = "comma"
 
 [[key]]
 name = "."
-x = 565
-y = 220
+x = 590.0
+y = 245.0
 width = 50
 height = 50
 keycode = "dot"
 
 [[key]]
 name = "/"
-x = 620
-y = 220
+x = 645.0
+y = 245.0
 width = 50
 height = 50
 keycode = "slash"
 
 [[key]]
 name = "R. Shift"
-x = 675
-y = 220
-width = 140 # Wider
+x = 745.0
+y = 245.0
+width = 140
 height = 50
 keycode = "rightshift"
 
-# Bottom Row (Modifiers & Space)
 [[key]]
 name = "L. Ctrl"
-x = 0
-y = 275
+x = 35.0
+y = 300.0
 width = 70
 height = 50
 keycode = "leftctrl"
 
 [[key]]
-name = "L. Super" # Or L. Win
-x = 75
-y = 275
+name = "L. Super"
+x = 105.0
+y = 300.0
 width = 60
 height = 50
 keycode = "leftmeta"
 
 [[key]]
 name = "L. Alt"
-x = 140
-y = 275
+x = 175.0
+y = 300.0
 width = 70
 height = 50
 keycode = "leftalt"
 
 [[key]]
 name = "Space"
-x = 215
-y = 275
-width = 300 # Much Wider
+x = 365.0
+y = 300.0
+width = 300
 height = 50
-# keycode = "space"
 
 [[key]]
-name = "R. Alt" # Or AltGr
-x = 520
-y = 275
+name = "R. Alt"
+x = 555.0
+y = 300.0
 width = 70
 height = 50
 keycode = "rightalt"
 
 [[key]]
-name = "R. Super" # Or R. Win
-x = 595
-y = 275
+name = "R. Super"
+x = 625.0
+y = 300.0
 width = 60
 height = 50
 keycode = "rightmeta"
 
 [[key]]
 name = "Menu"
-x = 660
-y = 275
+x = 690.0
+y = 300.0
 width = 60
 height = 50
-# keycode = "menu"
 
 [[key]]
 name = "R. Ctrl"
-x = 725
-y = 275
+x = 770.0
+y = 300.0
 width = 90
 height = 50
 keycode = "rightctrl"
 
-
-# Navigation Cluster
 [[key]]
-name = "PrtSc" # Print Screen / SysRq
-x = 840
-y = 0
+name = "PrtSc"
+x = 865.0
+y = 25.0
 width = 50
 height = 50
-keycode = "sysrq" # Often maps to SYSRQ
+keycode = "sysrq"
 
 [[key]]
-name = "ScrollLk" # Scroll Lock
-x = 895
-y = 0
+name = "ScrollLk"
+x = 920.0
+y = 25.0
 width = 50
 height = 50
 keycode = "scrolllock"
 
 [[key]]
-name = "Pause" # Pause/Break
-x = 950
-y = 0
+name = "Pause"
+x = 975.0
+y = 25.0
 width = 50
 height = 50
-# keycode = "pause"
 
 [[key]]
-name = "Ins" # Insert
-x = 840
-y = 55
+name = "Ins"
+x = 865.0
+y = 80.0
 width = 50
 height = 50
 keycode = "insert"
 
 [[key]]
 name = "Home"
-x = 895
-y = 55
+x = 920.0
+y = 80.0
 width = 50
 height = 50
-# keycode = "home"
 
 [[key]]
-name = "PgUp" # Page Up
-x = 950
-y = 55
+name = "PgUp"
+x = 975.0
+y = 80.0
 width = 50
 height = 50
 keycode = "pageup"
 
 [[key]]
-name = "Del" # Delete
-x = 840
-y = 110
+name = "Del"
+x = 865.0
+y = 135.0
 width = 50
 height = 50
 keycode = "delete"
 
 [[key]]
 name = "End"
-x = 895
-y = 110
+x = 920.0
+y = 135.0
 width = 50
 height = 50
-# keycode = "end"
 
 [[key]]
-name = "PgDn" # Page Down
-x = 950
-y = 110
+name = "PgDn"
+x = 975.0
+y = 135.0
 width = 50
 height = 50
 keycode = "pagedown"
 
-# Arrow Keys
 [[key]]
 name = "Up"
-x = 895
-y = 220
+x = 920.0
+y = 245.0
 width = 50
 height = 50
 keycode = "up"
 
 [[key]]
 name = "Left"
-x = 840
-y = 275
+x = 865.0
+y = 300.0
 width = 50
 height = 50
 keycode = "left"
 
 [[key]]
 name = "Down"
-x = 895
-y = 275
+x = 920.0
+y = 300.0
 width = 50
 height = 50
 keycode = "down"
 
 [[key]]
 name = "Right"
-x = 950
-y = 275
+x = 975.0
+y = 300.0
 width = 50
 height = 50
 keycode = "right"
